--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,14 @@
         android:theme="@style/Theme.Proyecto"
         tools:targetApi="31">
         <activity
-            android:name=".InfoJugador"
+            android:name=".activities.InfoJugador"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".PantallaPrincipal"
+            android:name=".activities.PantallaPrincipal"
             android:exported="true"
             android:label="@string/nombreapp">
             <meta-data
@@ -31,7 +31,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ActivityRegistro"
+            android:name=".activities.ActivityRegistro"
             android:exported="true"
             android:label="@string/nombreapp">
             <meta-data
@@ -39,7 +39,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
